target/classes/META-INF/fabric8/openshift/spring-boot-rest-http-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: 354f4e3cbd29ad03ba6c2e7444cb0fe9846af6cf
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=spring-boot-rest-http&var-version=1.5.17-3-SNAPSHOT
    fabric8.io/scm-con-url: scm:git:https://github.com/openshiftio/booster-parent.git/spring-boot-rest-http
    fabric8.io/scm-url: https://github.com/openshiftio/spring-boot-rest-http
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/git-branch: master
    fabric8.io/scm-devcon-url: scm:git:git:@github.com:openshiftio/booster-parent.git/spring-boot-rest-http
    fabric8.io/scm-tag: booster-parent-23
  labels:
    app: spring-boot-rest-http
    provider: fabric8
    version: 1.5.17-3-SNAPSHOT
    group: io.openshift.booster
  name: spring-boot-rest-http
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: spring-boot-rest-http
    provider: fabric8
    group: io.openshift.booster
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: 354f4e3cbd29ad03ba6c2e7444cb0fe9846af6cf
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=spring-boot-rest-http&var-version=1.5.17-3-SNAPSHOT
        fabric8.io/scm-con-url: scm:git:https://github.com/openshiftio/booster-parent.git/spring-boot-rest-http
        fabric8.io/scm-url: https://github.com/openshiftio/spring-boot-rest-http
        fabric8.io/iconUrl: img/icons/spring-boot.svg
        fabric8.io/git-branch: master
        fabric8.io/scm-devcon-url: scm:git:git:@github.com:openshiftio/booster-parent.git/spring-boot-rest-http
        fabric8.io/scm-tag: booster-parent-23
      labels:
        app: spring-boot-rest-http
        provider: fabric8
        version: 1.5.17-3-SNAPSHOT
        group: io.openshift.booster
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: ""
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: spring-boot-rest-http:latest
    type: ImageChange
