target/classes/META-INF/fabric8/openshift/spring-boot-rest-http-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    fabric8.io/git-commit: 354f4e3cbd29ad03ba6c2e7444cb0fe9846af6cf
    fabric8.io/scm-con-url: scm:git:https://github.com/openshiftio/booster-parent.git/spring-boot-rest-http
    prometheus.io/port: "9779"
    fabric8.io/scm-url: https://github.com/openshiftio/spring-boot-rest-http
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/git-branch: master
    prometheus.io/scrape: "true"
    fabric8.io/scm-devcon-url: scm:git:git:@github.com:openshiftio/booster-parent.git/spring-boot-rest-http
    fabric8.io/scm-tag: booster-parent-23
  labels:
    expose: "true"
    app: spring-boot-rest-http
    provider: fabric8
    version: 1.5.17-3-SNAPSHOT
    group: io.openshift.booster
  name: spring-boot-rest-http
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring-boot-rest-http
    provider: fabric8
    group: io.openshift.booster
