target/classes/META-INF/fabric8/openshift/spring-boot-rest-http-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: spring-boot-rest-http
    provider: fabric8
    version: 1.5.17-3-SNAPSHOT
    group: io.openshift.booster
  name: spring-boot-rest-http
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: spring-boot-rest-http
